Fix search button overlapping parent panel

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -72,7 +72,7 @@
     }
 
     #filtersDiv {
-        height: 365px;
+        height: 375px;
         width: 170px;
     }
 
@@ -91,7 +91,7 @@
     }
 
     #filtersVisibilityTrigger {
-        height: 365px;
+        height: 375px;
         width: 40px;
         top: 0;
         left: 170px;
